<resources>
    <string name="app_name">Digital Udhaar Khata</string>
    <string name="Welcome">Welcome to</string>
    <string name="Enterphonenumber">Enter Phonenumber</string>
    <string name="getotp">Get otp</string>
    <string name="phonenumberlengtherror">Phonenumber must be 10 digits</string>
    <string name="otplengtherror">Otp must be 6 digits</string>
    <string name="phonenumberhint">Enter phonenumber</string>
    <string name="otphint">Enter otp</string>
    <string name="verification_code_subtext">Please type the verification code sent to +*********</string>
    <string name="verification_code">Verification Code</string>
    <string name="validate">Validate</string>
    <string name="otperror">Invalid otp </string>
    <string name="networkerro_message">Check your Internet Connection</string>
    <string name="networkerror_title">Network error</string>
    <string name="ok">ok</string>
    <string name="verifyotp">verify otp</string>
    <string name="resgisteredsuccesssfully">registered successfully</string>
    <string name="title_activity_user_contents">UserContents</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="khatahint">Enter account name</string>
    <string name="khataquote">Enter your new khata account name </string>
    <string name="createnewkhata">Create new Khata</string>
    <string name="khatanamelowerror">name must be 5 digits </string>
    <string name="khatanamehigherror">name must be less than 5 digits</string>
    <string name="getamounttext">you\'ll get</string>
    <string name="giveamounttext">you\'ll give</string>
    <string name="yougave">you gave</string>
    <string name="yougot"> you got</string>
    <string name="addtransaction">Add</string>
    <string name="addcustomertext">+ Add Customer</string>
    <string name="entercustomername">Enter customer name</string>
    <string name="entercustomerphonenumber">Enter customer phonenumber</string>
    <string name="add">Add Customer</string>
    <string name="customernamehigh">name must be less than 30 characters</string>
    <string name="customernamelow">name must be atleast 1 character</string>
    <string name="amountlengthlow">amount must be atleast 1 rupee</string>
    <string name="amountlengthhigh">amount must be less than 10</string>
    <string name="enteramount">Enter the amount</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="logoutmessage">Do you want to logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
