<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:padding="16dp"
        android:text="@string/verification_code"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code_subtext"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />


   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/otplayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical|center_horizontal"
       android:layout_margin="20dp"
       app:errorEnabled="true"
       app:counterEnabled="true"
       app:counterMaxLength="6">
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/otptext"
           android:inputType="number"
           android:layout_width="match_parent"
           android:hint="@string/otphint"
           android:layout_height="wrap_content"/>
   </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/validate_button"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/verifyotp"
        android:textColor="@android:color/white"
        />
</LinearLayout>