<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Newkhaataentry"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/newkhaataquote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/khataquote"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/newkhaataquote"
        android:id="@+id/newkhatalayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:counterMaxLength="25"
        app:counterEnabled="true"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newkhatatext"
            android:layout_width="match_parent"
            android:hint="@string/khatahint"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/newkhatalayout"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <Button
        android:id="@+id/createkhata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/createnewkhata"
        android:textColor="#ffffff"
        android:layout_below="@id/progressbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />



</RelativeLayout>