<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:padding="50dp"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customernamelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:layout_margin="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customernametext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/entercustomername"
            android:inputType="textPersonName"
            android:layout_margin="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customernumberlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:layout_margin="10dp"
        android:layout_below="@+id/customernamelayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customernumbertext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phonenumberhint"
            android:inputType="phone"
            android:layout_margin="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:layout_below="@+id/customernumberlayout"/>
    <Button
        android:id="@+id/addcustommerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:layout_below="@+id/progressbar"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>